Mon Sep 17 22:33:41 BST 2012  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Use AM_PROG_AR before LT_INIT, for compatibility
	  with Automake 1.12.
	* NEWS: Document this.

Mon Sep 17 22:28:27 BST 2012  Colin Watson  <cjwatson@debian.org>

	Backport Gnulib commit 66712c23388e93e5c518ebc8515140fa0c807348 to
	stop assuming gets (Savannah bug #37255).

	* gnulib/gets.patch: New file.
	* autogen.sh: Apply gnulib/gets.patch.
	* NEWS: Document this.

Mon Sep 17 22:07:02 BST 2012  Colin Watson  <cjwatson@debian.org>

	Upgrade to Automake 1.11.6.

Thu Aug 16 12:08:48 BST 2012  Trần Ngọc Quân  <vnwildman@gmail.com>

	* po/vi.po: Update from Translation Project.
	* man/THANKS: Update.

Mon Jun 18 13:37:45 BST 2012  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.2.
	* man/po4a/po/man-db-manpages.pot, po/man-db.pot, po/*.po: Update.

Mon Jun 18 13:34:31 BST 2012  Ville Skyttä  <ville.skytta@iki.fi>

	* configure.ac: Add elinks and w3m to list of HTML browsers to
	  search for.

Mon Jun 18 13:02:06 BST 2012  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Adjust indentation.  Set unlzma to empty if xz is
	  found.

Mon Jun 18 12:56:56 BST 2012  Ville Skyttä  <ville.skytta@iki.fi>

	* configure.ac: Only check for lzma if xz is not found.
	* include/comp_src.h.in (comp_list): Likewise.

Mon Jun 18 11:40:27 BST 2012  Colin Watson  <cjwatson@debian.org>

	* configure.ac (AM_INIT_AUTOMAKE): Distribute tarballs compressed
	  using xz as well as gzip.

Mon Jun 18 11:24:30 BST 2012  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (main): Make the global configuration file optional
	  if a user configuration file was supplied.  Fixes test suite.

Mon Jun 18 10:59:41 BST 2012  Colin Watson  <cjwatson@debian.org>

	* README (Copyright and licensing): Update FSF copyright years.

Mon Jun 18 10:55:53 BST 2012  Colin Watson  <cjwatson@debian.org>

	Upgrade to Autoconf 2.69, Automake 1.11.5, and Gnulib
	20120404-stable.
