@@ -1,3 +1,7 @@
+Mon Sep 17 22:53:14 BST 2012  Colin Watson  <cjwatson@debian.org>
+
+	* Makefile.am (EXTRA_DIST): Add gnulib/gets.patch.
+
 Mon Sep 17 22:33:41 BST 2012  Colin Watson  <cjwatson@debian.org>
 
 	* configure.ac: Use AM_PROG_AR before LT_INIT, for compatibility
